automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 					</ul>
 				</section>
 				<!--/////////// End Archive List //////////-->
-
+<div class="two-column">
 				<!--/////////// Deals //////////-->
 				<section class="shadow">
 					<figure>
@@ -154,7 +154,7 @@
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 				</section>
-
+</div>
 				<section class="shadow">
 					<figure>
 						<img src="images/heel_3.jpg" alt="Picture of baby shoes">
