--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 				</section>
 		</div>
+		<div class="col-4">
 				<section class="shadow">
 					<figure>
 						<img src="images/skate_shoe.jpg" alt="Pair of Skater Shoes">
@@ -158,7 +159,8 @@
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 				</section>
-</div>
+			</div>
+			<div class="col-5">
 				<section class="shadow">
 					<figure>
 						<img src="images/heel_3.jpg" alt="Picture of baby shoes">
@@ -168,6 +170,7 @@
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 				</section>
+			</div>
 				<!--/////////// Ends Deals //////////-->
 
 			</div><!-- .wrapper -->
