--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
 			<div class="wrapper">
 
 				<div class="border_right">
+				<div class="col-3">
 					<h3>Contact</h3>
 					<p>email: <a href="mailto:info@zhwshoes.com">info@zhwshoes.com</a><br>
 					phone: +1 504 555 5555</p>
@@ -191,6 +192,7 @@
 					P.O. Box 5555<br>
 					Maricia, CA 91555, USA</address>
 				</div>
+			</div>
 
 				<div class="border_right">
 					<h3>Links</h3>
