--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
 			</div>
 
 				<div class="border_right">
+					<div class="col-4">
 					<h3>Links</h3>
 					<p><a href="#" target="_blank">Shoe Repair & Restoration</a><br>
 					<a href="#" target="_blank">Fashion Editors Assoc.</a><br>
@@ -205,8 +206,9 @@
 					<a href="#" target="_blank">Consumer Affairs</a><br>
 					<a href="#" target="_blank">Spearhead Artist Mgmt.</a></p>
 				</div>
+			</div>
 
-				<div class="">
+				<div class="col-5">
 					<h3>Follow</h3>
 					<p><a href="#" target="_blank">Youtube</a><br>
 					<a href="#" target="_blank">Facebook</a><br>
@@ -215,6 +217,7 @@
 					<a href="#" target="_blank">Foursquare</a><br>
 					<a href="#" target="_blank">Google Plus</a></p>
 				</div>
+			</div>
 
 			</div><!-- .wrapper -->
 
