automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 				<!--/////////// Ends Featured Brands //////////-->
 
 				<!--/////////// Archive List //////////-->
-				<div class="col-2">
+				<div id="col-2">
 				<section class="shadow">
 					<h2>Shoe Archive</h2>
 					<h3><a href="#">2014</a></h3>
@@ -160,7 +160,7 @@
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 				</section>
 			</div>
-			<div class="col-5">
+			<div id="col-2">
 				<section class="shadow">
 					<figure>
 						<img src="images/heel_3.jpg" alt="Picture of baby shoes">
