--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 				<!--/////////// Ends Featured Brands //////////-->
 
 				<!--/////////// Archive List //////////-->
-				<div id="col-2">
+				<div class="col-2">
 				<section class="shadow">
 					<h2>Shoe Archive</h2>
 					<h3><a href="#">2014</a></h3>
@@ -149,7 +149,7 @@
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 				</section>
 		</div>
-		<div id="col-1">
+		<div id="col-1" class="skate">
 				<section class="shadow">
 					<figure>
 						<img src="images/skate_shoe.jpg" alt="Pair of Skater Shoes">
@@ -160,7 +160,7 @@
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 				</section>
 			</div>
-			<div id="col-2">
+			<div class="col-2">
 				<section class="shadow">
 					<figure>
 						<img src="images/heel_3.jpg" alt="Picture of baby shoes">
