--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				<h2 class="milk_text">Featured Brands</h2>
 
 				<!--/////////// Featured Brands //////////-->
-				<div id="col-1">
+				<div class="col-1">
 				<section class="shadow">
 					<figure>
 						<img src="images/shoes_on_grass.jpg" alt="Photo of shoes in the wet grass">
@@ -137,7 +137,7 @@
 				</section>
 			</div>
 				<!--/////////// End Archive List //////////-->
-		<div id="col-1">
+		<div class="col-1">
 				<!--/////////// Deals //////////-->
 				<section class="shadow">
 					<figure>
@@ -149,7 +149,7 @@
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 				</section>
 		</div>
-		<div id="col-1" class="skate">
+		<div class="col-1">
 				<section class="shadow">
 					<figure>
 						<img src="images/skate_shoe.jpg" alt="Pair of Skater Shoes">
