--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 			<div class="wrapper">
 
 				<div class="border_right">
-				<div id="col-1">
+				<div class="col-1">
 					<h3>Contact</h3>
 					<p>email: <a href="mailto:info@zhwshoes.com">info@zhwshoes.com</a><br>
 					phone: +1 504 555 5555</p>
@@ -195,7 +195,7 @@
 			</div>
 
 				<div class="border_right">
-					<div id="col-1">
+					<div class="col-1">
 					<h3>Links</h3>
 					<p><a href="#" target="_blank">Shoe Repair & Restoration</a><br>
 					<a href="#" target="_blank">Fashion Editors Assoc.</a><br>
@@ -208,7 +208,7 @@
 				</div>
 			</div>
 
-				<div id="col-2">
+				<div class="col-2">
 					<h3>Follow</h3>
 					<p><a href="#" target="_blank">Youtube</a><br>
 					<a href="#" target="_blank">Facebook</a><br>
