--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 				<!--/////////// Ends Featured Brands //////////-->
 
 				<!--/////////// Archive List //////////-->
-				<div class="col-2">
+				<div class="col-2" id="archive">
 				<section class="shadow">
 					<h2>Shoe Archive</h2>
 					<h3><a href="#">2014</a></h3>
